loading hozzáadva, logikai hibák javítva

--- a/app/mystyle.css
+++ b/app/mystyle.css
@@ -1,216 +1,217 @@
-body{
-    background-color: #f1f1f1;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+  background-color: #f1f1f1;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-#login{
-    display: flex;
-    margin-top: 5%;
-    justify-content: space-evenly;
+#login {
+  display: flex;
+  margin-top: 5%;
+  justify-content: space-evenly;
 }
-#menuWrapper{
-    width: fit-content;
-    display: flex;
-    width: 100%;
-}
-
-#menu{
-    width: fit-content;
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 2%;
+#menuWrapper {
+  width: fit-content;
+  display: flex;
+  width: 100%;
 }
 
-#logOut{
-    display: flex;
-    position: absolute; 
-    right: 1%;
-    padding-top: 2%;
+#menu {
+  width: fit-content;
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 2%;
 }
 
-#title{
-    text-align: center;
-    font-size: 50px;
-    margin: auto;
+#logOut {
+  display: flex;
+  position: absolute;
+  right: 1%;
+  padding-top: 2%;
 }
 
-#title2{
-    text-align: center;
-    margin: auto;
+#title {
+  text-align: center;
+  font-size: 50px;
+  margin: auto;
 }
 
-#leftUp{
-    width: 50%;
+#title2 {
+  text-align: center;
+  margin: auto;
 }
 
-#rightUp{
-    width: 50%;
+#leftUp {
+  width: 50%;
 }
 
-.content{
-    width: 95%;
-    margin: 5px;
+#rightUp {
+  width: 50%;
 }
 
-.roundCorner{
-    border: none;
-    border-radius: 3px;
+.content {
+  width: 95%;
+  margin: 5px;
 }
 
-#row{
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 2%;
+.roundCorner {
+  border: none;
+  border-radius: 3px;
 }
 
-#threeCheckBox{
-    display: flex;
-    justify-content: space-evenly;
-    padding-top: 2%;
+#row {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 2%;
 }
 
-#middle{
-    width: 80%;
+#threeCheckBox {
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 2%;
 }
 
-#validTo{
-    display: flex;
-    justify-content:flex-start;
+#middle {
+  width: 80%;
 }
 
-#leftCheckBox{
-    width: 33%;
+#validTo {
+  display: flex;
+  justify-content: flex-start;
 }
 
-#middleCheckBox{
-    width: 33%;
+#leftCheckBox {
+  width: 33%;
 }
 
-#rightCheckBox{
-    width: 33%;
+#middleCheckBox {
+  width: 33%;
 }
 
-#textArea{
-    width: 100%;
-    height: 250px;
+#rightCheckBox {
+  width: 33%;
 }
 
-.requestElement{
-    background-color: white;
+#textArea {
+  width: 100%;
+  height: 250px;
 }
 
-#createForm{
-    background-color: #f1f1f1;
+.requestElement {
+  background-color: white;
+}
+
+#createForm {
+  background-color: #f1f1f1;
 }
 
 .collapsible {
-    background-color: #777;
-    color: white;
-    cursor: pointer;
-    padding: 18px;
-    margin: 3px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-  }
-  
-  .active, .collapsible:hover {
-    background-color: #555;
-  }
-  
-  .collapsibleContent {
-    padding: 0 18px;
-    display: none;
-    overflow: hidden;
-    background-color: #f1f1f1;
-  }
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  margin: 3px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
 
-  button{
-    min-width: 70px;
-    background-color: #777;
-    color: white;
-    cursor: pointer;
-    border: none;
-    border-radius: 3px;
-    padding: 5px;
-    margin: 1px;
-  }
+.active,
+.collapsible:hover {
+  background-color: #555;
+}
 
-  button:hover{
-    background-color: #555;
-  }
+.collapsibleContent {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
 
-  button:active{
-    background-color: #555;
-  }
+.btn {
+  min-width: 70px;
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
+  margin: 1px;
+  text-decoration: none;
+}
 
-  .button{
-    background-color: #777;
-    color: white;
-    cursor: pointer;
-    border: none;
-    border-radius: 3px;
-    padding: 5px;
-    margin: 1px;
-  }
+.btn:hover {
+  background-color: #555;
+}
 
-  .button:hover{
-    background-color: #555;
-  }
+.btn:active {
+  background-color: #555;
+}
 
-  .activeMenuButton{
-    background-color: #333333;
-  }
+.button {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
+  margin: 1px;
+}
 
-  .stayLeft{
-    float:left;
-  }
+.button:hover {
+  background-color: #555;
+}
 
-  .text-center{
-    text-align: center;
-    margin: auto;
-  }
+.activeMenuButton {
+  background-color: #333333;
+}
 
-  .alert-danger{
-    background-color: red;
+.stayLeft {
+  float: left;
+}
 
-  }
+.text-center {
+  text-align: center;
+  margin: auto;
+}
 
-  .alert-success{
-    background-color: green;
-  }
+.alert-danger {
+  background-color: red;
+}
 
-  .alert-warning{
-    background-color: orange;
-  }
+.alert-success {
+  background-color: green;
+}
 
-.alert{
-  width:30%;
-  margin:auto auto;
-  padding:35px;
+.alert-warning {
+  background-color: orange;
+}
+
+.alert {
+  width: 30%;
+  margin: auto auto;
+  padding: 35px;
   position: absolute;
   top: 8%;
   left: 1%;
   z-index: 100;
-  border-radius:5px;
-  box-shadow:0 0 15px 5px #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 15px 5px #ccc;
 }
 
-.close{
-  position:absolute;
-  width:30px;
-  height:30px;
-  opacity:0.5;
-  border-width:1px;
-  border-style:solid;
-  border-radius:50%;
-  right:15px;
-  top:25px;
-  text-align:center;
-  font-size:1.6em;
-  cursor:pointer;
+.close {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  opacity: 0.5;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 50%;
+  right: 15px;
+  top: 25px;
+  text-align: center;
+  font-size: 1.6em;
+  cursor: pointer;
 }
 
 /* width */
@@ -234,32 +235,31 @@ body{
   background: #555;
 }
 
-.shorterTextField{
-  display:block;
+.shorterTextField {
+  display: block;
   width: 30%;
-  line-break:normal;
+  line-break: normal;
 }
 
-#createDistributionListButton{
+#createDistributionListButton {
   margin-top: 30px;
 }
 
-#userEdit{
+#userEdit {
   background-color: orange;
 }
 
-#userEdit:hover{
+#userEdit:hover {
   background-color: rgb(255, 209, 122);
 }
 
-#userDelete{
+#userDelete {
   background-color: red;
 }
 
-#userDelete:hover{
+#userDelete:hover {
   background-color: rgb(255, 116, 116);
 }
-
 
 /* The search field */
 #myInput {
@@ -271,7 +271,9 @@ body{
 }
 
 /* The search field when it gets focus/clicked on */
-#myInput:focus {outline: 3px solid #ddd;}
+#myInput:focus {
+  outline: 3px solid #ddd;
+}
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -300,22 +302,93 @@ body{
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+  display: block;
+}
 
-.green{
+.green {
   color: green;
 }
 
-.red{
+.red {
   color: red;
 }
 
-.orange{
+.orange {
   color: orange;
 }
 
-#requestEdit{
+#requestEdit {
   background-color: white;
   margin: 20px 0;
   padding: 5px;
+}
+
+.dots-loading {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.dots-loading::before,
+.dots-loading::after {
+  content: " ";
+}
+
+.dots-loading div,
+.dots-loading::before,
+.dots-loading::after {
+  margin: 35px 5px;
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #c4c4c4;
+  opacity: 0;
+}
+
+.dots-loading::before {
+  -moz-animation: opacitychange 1s ease-in-out infinite;
+  -webkit-animation: opacitychange 1s ease-in-out infinite;
+  -o-animation: opacitychange 1s ease-in-out infinite;
+  animation: opacitychange 1s ease-in-out infinite;
+}
+
+.dots-loading div {
+  -moz-animation: opacitychange 1s ease-in-out 0.33s infinite;
+  -webkit-animation: opacitychange 1s ease-in-out 0.33s infinite;
+  -o-animation: opacitychange 1s ease-in-out 0.33s infinite;
+  animation: opacitychange 1s ease-in-out 0.33s infinite;
+  -webkit-animation-fill-mode: infinite;
+  animation-fill-mode: infinite;
+}
+
+.dots-loading::after {
+  -moz-animation: opacitychange 1s ease-in-out 0.66s infinite;
+  -webkit-animation: opacitychange 1s ease-in-out 0.66s infinite;
+  -o-animation: opacitychange 1s ease-in-out 0.66s infinite;
+  animation: opacitychange 1s ease-in-out 0.66s infinite;
+  -webkit-animation-fill-mode: infinite;
+  animation-fill-mode: infinite;
+}
+
+@keyframes opacitychange {
+  0%,
+  100% {
+    opacity: 0;
+  }
+
+  60% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes opacitychange {
+  0%,
+  100% {
+    opacity: 0;
+  }
+
+  60% {
+    opacity: 1;
+  }
 }
