--- a/app/mystyle.css
+++ b/app/mystyle.css
@@ -371,3 +371,44 @@ body {
     transform: translateX(-50%) scale(1.2);
   }
 }
+
+/* The search field */
+#myInput {
+  box-sizing: border-box;
+
+  height: 5%;
+  min-width: 450px;
+  text-align: left;
+}
+
+/* The search field when it gets focus/clicked on */
+#myInput:focus {outline: 3px solid #ddd;}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f6f6f6;
+  border: 1px solid #ddd;
+  z-index: 1;
+  overflow: auto;
+  width: 460px;
+  max-height: 450px;
+}
+
+.dropdown-content button {
+  padding: 12px 16px;
+  text-align: left;
+  text-decoration: none;
+  display: block;
+  width: 99%;
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {display:block;}
