--- a/app/mystyle.css
+++ b/app/mystyle.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f1f1f1;
+  background-color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -8,6 +8,7 @@ body {
   margin-top: 5%;
   justify-content: space-evenly;
 }
+
 #menuWrapper {
   width: fit-content;
   display: flex;
@@ -100,10 +101,12 @@ body {
 }
 
 #createForm {
-  background-color: #f1f1f1;
+  background-color: white;
 }
 
 .collapsible {
+  display: flex;
+  justify-content: space-evenly;
   background-color: #777;
   color: white;
   cursor: pointer;
@@ -111,7 +114,7 @@ body {
   margin: 3px;
   width: 100%;
   border: none;
-  text-align: left;
+  min-height: 8%;
   outline: none;
   font-size: 15px;
 }
@@ -179,12 +182,27 @@ body {
   background-color: red;
 }
 
+.redColor {
+  color: rgb(200, 0, 0);
+  font-weight: bold;
+}
+
 .alert-success {
   background-color: green;
 }
 
+.greenColor {
+  color: rgb(0, 85, 0);
+  font-weight: bold;
+}
+
 .alert-warning {
   background-color: orange;
+}
+
+.orangeColor {
+  color: orange;
+  font-weight: bold;
 }
 
 .alert {
@@ -382,7 +400,9 @@ body {
 }
 
 /* The search field when it gets focus/clicked on */
-#myInput:focus {outline: 3px solid #ddd;}
+#myInput:focus {
+  outline: 3px solid #ddd;
+}
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -411,4 +431,51 @@ body {
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.show {display:block;}
+.show {
+  display: block;
+}
+
+.upArrow {
+  background-image: url("./imgs/up_arrow.png");
+  float: right;
+}
+
+.downArrow {
+  background-image: url("./imgs/down_arrow.png");
+  float: right;
+}
+
+.defaultArrow {
+  background-image: url("./imgs/default_arrow.png");
+  float: right;
+}
+
+.upArrow,
+.downArrow,
+.defaultArrow {
+  width: 16.66666666666667%;
+  font-weight: bold;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center left;
+  padding: 10px;
+  padding-left: 20px;
+}
+
+#sortHead {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  text-align: left;
+}
+
+#sortTextWrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  text-align: left;
+}
+
+.sortText {
+  width: 16.66666666666667%;
+}
