--- a/app/mystyle.css
+++ b/app/mystyle.css
@@ -101,7 +101,7 @@ body {
 }
 
 #createForm {
-  background-color: white;
+  background-color: #f1f1f1;
 }
 
 .collapsible {
@@ -192,7 +192,7 @@ body {
 }
 
 .greenColor {
-  color: rgb(0, 85, 0);
+  color: rgb(0, 200, 0);
   font-weight: bold;
 }
 
@@ -478,4 +478,11 @@ body {
 
 .sortText {
   width: 16.66666666666667%;
+}
+
+.stickyDiv {
+  position: fixed;
+  top: 0;
+  background: rgba(241, 241, 241, 0.5);
+  transition: 500ms;
 }
