--- a/app/mystyle.css
+++ b/app/mystyle.css
@@ -2,21 +2,8 @@ html {
   font-family: Tahoma, sans-serif;
 }
 
-/*@media (max-width: 1540px) {
-  body {
-    margin: 0;
-    padding: 0;
-  }
+@media (min-width: 2500px) {
 }
-
-@media (min-width: 1540px) {
-  body {
-    margin: 0;
-    padding: 0;
-    margin-left: 15%;
-    margin-right: 15%;
-  }
-}*/
 
 body {
   margin: 0;
@@ -70,7 +57,7 @@ body {
 
 .login-input:focus {
   border: 1px solid #15808a;
-  box-shadow: inset 2px 2px 2px #15808a;
+  box-shadow: inset 0 0 5px #e3a420;
 }
 
 #login-button-wrapper {
@@ -157,9 +144,10 @@ nav a:hover {
 
 /* Main Content */
 
-#main-content-wrapper {
-  width: 100%;
-  margin-top: 20px;
+.main-content-wrapper {
+  max-width: 1300px;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 #upper-fileds-wrapper {
@@ -180,7 +168,6 @@ nav a:hover {
 .create-form {
   background-color: #f1f1f1;
   padding: 10px;
-  margin: 10px;
 }
 
 #left-up,
@@ -281,11 +268,20 @@ input[type="checkbox"] {
 
 input[type="text"],
 input[type="number"],
+input[type="password"],
 input[type="datetime-local"] {
   border-radius: 5px;
   border: 1px solid #15808a;
   padding: 2px 5px;
   margin-bottom: 2px;
+  outline: none;
+}
+
+input[type="text"]:focus,
+input[type="number"]:focus,
+input[type="password"]:focus,
+input[type="datetime-local"]:focus {
+  box-shadow: inset 0 0 5px #e3a420;
 }
 
 .button {
@@ -502,6 +498,26 @@ input:checked + .slider:before {
   font-size: 150%;
   font-weight: bold;
 }
+
+/* Device Size Dependent */
+
+@media (min-width: 1900px) {
+  .main-content-wrapper {
+    max-width: 1860px;
+  }
+}
+
+@media (min-width: 2500px) {
+  html {
+    font-size: 150%;
+  }
+
+  .main-content-wrapper {
+    max-width: 2440px;
+  }
+}
+
+/* Device Size Dependent End */
 
 /* Old css*/
 #login {
