--- a/app/mystyle.css
+++ b/app/mystyle.css
@@ -249,6 +249,11 @@ nav a:hover {
 
 /* Create Distribution List*/
 
+.distribution-list-wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 #create-distribution-list-div {
   width: 98%;
   background-color: #f1f1f1;
