--- a/app/mystyle.css
+++ b/app/mystyle.css
@@ -363,6 +363,30 @@ input[type="datetime-local"]:focus {
 
 /* Sort Head End */
 
+/* Edit Table */
+
+.edit-table {
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.edit-table tr,
+.edit-table td {
+  padding: 5px;
+}
+
+.edit-table tr:nth-child(even) {
+  padding: 5px;
+  background-color: #f1f1f1;
+}
+
+.edit-table td:nth-child(even) {
+  float: right;
+}
+
+/* Edit Table End*/
+
 /* Jump-to-top-arrow */
 #jump-to-top-arrow-div {
   position: fixed;
