--- a/app/mystyle.css
+++ b/app/mystyle.css
@@ -384,6 +384,8 @@ input[type="datetime-local"]:focus {
 .sticky-div {
   position: fixed;
   max-width: 1300px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   top: 0;
   background: rgba(255, 255, 255, 0.5);
   transition: 500ms;
@@ -663,7 +665,7 @@ input:checked + .slider:before {
     margin-bottom: 10px;
   }
 
-  .sticky-div{
+  .sticky-div {
     max-width: 1860px;
   }
 }
@@ -678,7 +680,7 @@ input:checked + .slider:before {
     margin-bottom: 10px;
   }
 
-  .sticky-div{
+  .sticky-div {
     max-width: 2440px;
   }
 }
